--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <body>
         <canvas id="canvas" width="700" height="100"></canvas>
+        <div id="tooltip">
+        </div>
         <script src="iota.min.js" type="text/javascript"></script>
         <script src="main.js" type="text/javascript"></script>
     </body>
