--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="tooltip">
         </div>
         <script src="iota.min.js" type="text/javascript"></script>
-        <script src="main.js" type="text/javascript"></script>
+        <script src="mainBackend.js" type="text/javascript"></script>
     </body>
 
 </html>
