Feature upgrade: Dynamic toplist

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
         </div>
         <div id="status"></div>
 
+        <table id="toplist">
+        </table>
+
         <canvas id="canvas" width="700" height="100"></canvas>
+        <div id="loading">Loading...</div>
         <div id="tooltip">
         </div>
         <script src="iota.min.js" type="text/javascript"></script>
+        <script src="lodash.min.js" type="text/javascript"></script>
         <script src="mainBackend.js" type="text/javascript"></script>
     </body>
 
