--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     </head>
 
     <body>
+        <div id="github_buttons">
+            <a class="github-button" href="https://github.com/cyclux/IOTA-Confirmation-Visualizer/subscription" data-icon="octicon-eye" data-size="large" aria-label="Watch cyclux/IOTA-Confirmation-Visualizer on GitHub">Watch</a>
+            <a class="github-button" href="https://github.com/cyclux/IOTA-Confirmation-Visualizer/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue cyclux/IOTA-Confirmation-Visualizer on GitHub">Issue</a>
+        </div>
+
         <div id="inputs">
             <input id="address_input" type="text" name="address" value="" placeholder="Enter address to track" size=105>
             <button id="address_button" type="button" name="button">Go</button>
@@ -23,6 +28,7 @@
         </div>
         <script src="iota.min.js" type="text/javascript"></script>
         <script src="lodash.min.js" type="text/javascript"></script>
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
         <script src="mainBackend.js" type="text/javascript"></script>
     </body>
 
