Add feature: compressed polling

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="loading">Loading...</div>
         <div id="tooltip">
         </div>
+        <script src="pako_inflate.min.js" type="text/javascript"></script>
         <script src="iota.min.js" type="text/javascript"></script>
         <script src="lodash.min.js" type="text/javascript"></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
