CTPS toplist metric + manual expansion of list length + better styling

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <table id="toplist">
         </table>
 
+        <div id="toplist-more" class="noselect">
+            [show more..]
+        </div>
+
         <div id="inputs">
             <input id="address_input" type="text" name="address" value="" placeholder="Enter address to track" size=105>
             <button id="address_button" type="button" name="button">Go</button>
