Rise to 10k TX / wider width + total CTPS display + minor changes

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </div>
 
         <div id="inputs">
-            <input id="address_input" type="text" name="address" value="" placeholder="Enter address to track" size=105>
+            <input id="address_input" type="text" name="address" value="" placeholder="Enter address to track">
             <button id="address_button" type="button" name="button">Go</button>
         </div>
         <div id="status"></div>
 
-        <canvas id="canvas" width="700" height="100"></canvas>
+        <canvas id="canvas" width="950" height="100"></canvas>
         <div id="loading">Loading...</div>
         <div id="tooltip">
         </div>
