--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>IOTA Confirmation Visualizer</title>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
@@ -30,11 +30,10 @@
         <div id="loading">Loading...</div>
         <div id="tooltip">
         </div>
-        <script src="pako_inflate.min.js" type="text/javascript"></script>
-        <script src="iota.min.js" type="text/javascript"></script>
-        <script src="lodash.min.js" type="text/javascript"></script>
+        <script src="js/pako_inflate.min.js" type="text/javascript"></script>
+        <script src="js/lodash.min.js" type="text/javascript"></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
-        <script src="mainBackend.js" type="text/javascript"></script>
+        <script src="js/mainBackend.js" type="text/javascript"></script>
     </body>
 
 </html>
