Fix for "current TPS" and preparation for new metrics display

--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
             <button id="address_button" type="button">Go</button>
         </div>
         <div id="status"></div>
+<!--
+
+        <div id="metrics_wrapper">
+            <div id="metric_confrate_wrapper">
+                <span>TPS: </span>
+                <span id="metric_totalTPS"></span>
+
+                <span>CTPS: </span>
+                <span id="metric_totalCTPS"></span>
+
+                <span>Confirmation rate: </span>
+                <span id="metric_totalConfRate"></span>
+
+                <span>Confirmation time: </span>
+                <span id="metric_totalConfirmationTime"></span>
+            </div>
+
+        </div>
+    -->
 
         <canvas id="canvas" width="950" height="100"></canvas>
         <div id="loading">Loading...</div>
