Feature: Hide zero value TX

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
         </div>
 
         <div id="toplist_wrapper">
+
             <div id="minNumberOfTxWrapper">
                 <span>Min. TX amount</span>
                 <input type="text" id="minNumberOfTxIncluded" value="10">
                 <button id="minNumberOfTxIncluded_button" type="button">Set</button>
+            </div>
+
+            <div id="hideZeroValue">
+                <span>Hide zero value TX?</span>
+                <input type="checkbox" id="hideZero">
             </div>
 
             <table id="toplist"></table>
