Additional toplist functions

--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
 
             <table id="toplist"></table>
 
-            <div id="toplist-more" class="noselect">
-                [show more..]
+            <div id="toplist-menu">
+                <div id="toplist-more" class="toplist noselect">
+                    [ show more
+                </div>
+                <div id="toplist-all" class="toplist noselect">
+                    | show all |
+                </div>
+                <div id="toplist-reset" class="toplist noselect">
+                    reset ]
+                </div>
             </div>
+
         </div>
 
         <div id="inputs">
