--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>IOTA Confirmation Visualizer</title>
+        <title>TangleMonitor - Live visualisation and metrics of the IOTA Tangle</title>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
