Remove and replace old js

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <body>
         <div id="github_buttons">
-            <a class="github-button" href="https://github.com/cyclux/IOTA-Confirmation-Visualizer/subscription" data-icon="octicon-eye" data-size="large" aria-label="Watch cyclux/IOTA-Confirmation-Visualizer on GitHub">Watch</a>
-            <a class="github-button" href="https://github.com/cyclux/IOTA-Confirmation-Visualizer/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue cyclux/IOTA-Confirmation-Visualizer on GitHub">Issue</a>
+            <a class="github-button" href="https://github.com/cyclux/tanglemonitor/subscription" data-icon="octicon-eye" data-size="large" aria-label="Watch cyclux/IOTA-Confirmation-Visualizer on GitHub">Watch</a>
+            <a class="github-button" href="https://github.com/cyclux/tanglemonitor/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue cyclux/IOTA-Confirmation-Visualizer on GitHub">Issue</a>
         </div>
 
         <div id="toplist_wrapper">
@@ -73,7 +73,7 @@
         </div>
         <script src="js/lodash.min.js" type="text/javascript"></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
-        <script src="js/mainBackend.js" type="text/javascript"></script>
+        <script src="js/tanglemonitor.js" type="text/javascript"></script>
     </body>
 
 </html>
