Switch to minified versions of JS and CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>TangleMonitor - Live visualisation and metrics of the IOTA Tangle</title>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.min.css">
     </head>
 
     <body>
@@ -73,7 +73,7 @@
         </div>
         <script src="js/lodash.min.js" type="text/javascript"></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
-        <script src="js/tanglemonitor.js" type="text/javascript"></script>
+        <script src="js/tanglemonitor.min.js" type="text/javascript"></script>
     </body>
 
 </html>
