Switch buttons to new rep name

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <body>
         <div id="github_buttons">
-            <a class="github-button" href="https://github.com/cyclux/tanglemonitor/subscription" data-icon="octicon-eye" data-size="large" aria-label="Watch cyclux/IOTA-Confirmation-Visualizer on GitHub">Watch</a>
-            <a class="github-button" href="https://github.com/cyclux/tanglemonitor/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue cyclux/IOTA-Confirmation-Visualizer on GitHub">Issue</a>
+            <a class="github-button" href="https://github.com/cyclux/tanglemonitor/subscription" data-icon="octicon-eye" data-size="large" aria-label="Watch cyclux/tanglemonitor on GitHub">Watch</a>
+            <a class="github-button" href="https://github.com/cyclux/tanglemonitor/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue cyclux/tanglemonitor on GitHub">Issue</a>
         </div>
 
         <div id="toplist_wrapper">
