--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <script src="js/lodash.min.js" type="text/javascript"></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
         <script src="js/tanglemonitor.min.js" type="text/javascript"></script>
+        <script src="js/socket.io.js" type="text/javascript"></script>
     </body>
 
 </html>
