Optimization of address selection and highlighting

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
         <div id="inputs">
             <input id="address_input" type="text" name="address" value="" placeholder="Enter address to track">
-            <button id="address_button" type="button">Go</button>
+            <button id="address_button" type="button">Set</button>
+            <button id="address_button_reset" type="button">Reset</button>
         </div>
         <div id="status"></div>
 <!--
