--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     </head>
 
     <body>
+
+
         <div id="github_buttons">
             <a class="github-button" href="https://github.com/cyclux/tanglemonitor/subscription" data-icon="octicon-eye" data-size="large" aria-label="Watch cyclux/tanglemonitor on GitHub">Watch</a>
             <a class="github-button" href="https://github.com/cyclux/tanglemonitor/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue cyclux/tanglemonitor on GitHub">Issue</a>
         </div>
 
         <div id="toplist_wrapper">
+          <div id="testnet" class="center">
+            Testnet
+          </div>
 
             <div id="minNumberOfTxWrapper">
                 <span>Min. TX amount</span>
