Added donation address.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
         <div id="loading">Loading...</div>
         <div id="tooltip">
         </div>
+        <div id="donation-address">
+          <img src="img/heart.png" id="heart" alt="heart">
+          ZXDAVDTUSTEEEPLSHERIMEJYWVVKUGMWKXAYEWPAUCJZTVDEAEUVLN9DGNNZZSYLERNQNMFYEE9VAD9KWMTMKYOSLC
+        </div>
         <script src="js/lodash.min.js" type="text/javascript"></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
         <script src="js/tanglemonitor.min.js" type="text/javascript"></script>
