First implementation of endless mode

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <input type="checkbox" id="hideZero">
             </div>
 
+            <div id="endlessModeWrapper">
+                <span>Endless mode</span>
+                <input type="checkbox" id="endlessMode">
+            </div>
+
             <table id="toplist"></table>
 
             <div id="toplist-menu">
