Show milestones on zero value TX view

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div id="hideZeroValue">
-                <span>Hide zero value TX?</span>
+                <span>Hide zero value TX</span>
                 <input type="checkbox" id="hideZero">
             </div>
 
