id to class for header title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div id="toplist_wrapper">
-          <div id="testnet" class="center">
+          <div class="net_title" class="center">
             Testnet
           </div>
 
