Title for spamnet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         </div>
 
         <div id="toplist_wrapper">
-
+          <div class="net_title" class="center">
+            Spamnet
+          </div>
             <div id="minNumberOfTxWrapper">
                 <span>Min. TX amount (toplist)</span>
                 <input type="text" id="minNumberOfTxIncluded" value="10">
