Fixed html markup bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div id="toplist_wrapper">
-          <div class="net_title" class="center">
+          <div class="center net_title">
             Spamnet
           </div>
             <div id="minNumberOfTxWrapper">
