Fix classes of title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div id="toplist_wrapper">
-          <div class="net_title" class="center">
+          <div class="center net_title">
             Testnet
           </div>
 
