--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         </div>
 
         <div id="toplist_wrapper">
-
+            <div class="center net_title">
+              Mainnet
+            </div>
             <div id="minNumberOfTxWrapper">
                 <span>Min. TX amount (toplist)</span>
                 <input type="text" id="minNumberOfTxIncluded" value="10">
