Switch for tangle networks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
         <div id="toplist_wrapper">
             <div class="center net_title">
-              Mainnet
+              <select id="netselector" class="" name="netselector">
+                <option value="mainnet">Mainnet</option>
+                <option value="testnet">Testnet</option>
+                <option value="spamnet">Spamnet</option>
+              </select>
             </div>
             <div id="minNumberOfTxWrapper">
                 <span>Min. TX amount (toplist)</span>
