--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="toplist_wrapper">
             <div class="center net_title">
               <select id="netselector" class="" name="netselector">
-                <option value="mainnet">Mainnet</option>
+                <option value="mainnet" selected>Mainnet</option>
                 <option value="testnet">Testnet</option>
                 <option value="spamnet">Spamnet</option>
               </select>
