Add uniform font as Consolas is not available on all platforms

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>TangleMonitor - Live visualisation and metrics of the IOTA Tangle</title>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" type="text/css" href="css/style.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/style.min.css">  
     </head>
 
     <body>
