Change testnet to devnet

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="center net_title">
               <select id="netselector" class="" name="netselector">
                 <option value="mainnet" selected>Mainnet</option>
-                <option value="testnet">Testnet</option>
+                <option value="testnet">Devnet</option>
                 <option value="spamnet">Spamnet</option>
               </select>
             </div>
