--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div id="toplist_wrapper">
             <div class="center net_title">
               <select id="netselector" class="" name="netselector">
-                <option value="mainnet" selected>Mainnet</option>
+                <option value="mainnet">Mainnet</option>
                 <option value="testnet">Devnet</option>
-                <option value="spamnet">Spamnet</option>
+                <option value="spamnet" selected>Spamnet</option>
               </select>
             </div>
             <div id="minNumberOfTxWrapper">
