--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,7 +120,7 @@
         <script src="js/lodash.min.js" type="text/javascript"></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
         <script src="js/tanglemonitor.min.js" type="text/javascript"></script>
-        <script src="js/socket.io.js" type="text/javascript"></script>
+        <script src="js/socket.io.min.js" type="text/javascript"></script>
     </body>
 
 </html>
